####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.2.1
#########

:Codename: ??
:2.2.1: NOT RELEASED YET

Compatibility Breaks
********************

Bug Fixes
*********

* CommitBuilder now uses the committer instead of _config.username to generate
  the revision-id.  (Aaron Bentley, #614404)

Improvements
************

Documentation
*************


API Changes
***********

Internals
*********

* Remove used and broken code path in ``BranchInitHookParams.__repr__``.
  (Andrew Bennetts)

Testing
*******

bzr 2.2
#######

:Codename: La Hulpe
:2.2: 2010-08-06

This release marks the start of another long-term-stable series. From
here, we will only make bugfix releases on the 2.2 series (2.2.1, etc),
while 2.3 will become our new development series. The 2.0 and 2.1 series
will also continue to get bugfixes. (Currently 2.0 is planned to be
supported for another 6 months.)

This is primarily a bugfix and polish release over the 2.1 series, with
a large number of bugs fixed (>120), and some performance improvements.

There are some compatibility changes in this release.  For users of bzrlib
as a library, we now request that they call ``bzrlib.initialize`` and use
the returned context manager appropriately. For commandline users we no
longer guess user identity for ``bzr commit``, users must specify their
identity using ``bzr whoami`` (you don't need to specify your identity for
readonly operations).

Users are encouraged to upgrade from the other stable series.

Compatibility Breaks
********************

* BzrError subclasses no longer support the name "message" to be used
  as an argument for __init__ or in _fmt format specification as this
  breaks in some Python versions. errors.LockError.__init__ argument
  is now named "msg" instead of earlier "message".
  (Parth Malwankar, #603461)

* The old ``bzr selftest --benchmark`` option has been removed.